styles/style.less
//LESS document

// includes
@import "functions";
@import "values";
@import "columns";


/*Theme Name: Mineral School
Theme URI: http://www.staging.designbydoug.com/themes/mineralschool
Author: Seattle Central College ITC 210 project team
Author URI: http://staging.designbydoug.com
Description: Wordpress theme for Mineral School, designed and developed by the ITC 210 project team at Seattle Central College
License: 
License URI: 
*/

/***** resets *****/

body, body * {
  padding: 0;
  margin: 0;
}

a img {
  border: 0;
}

img {
  height: auto;
  max-width: 100%;
}

/****** body styles *****/

body {
  font-family: 'Roboto', sans-serif; 
  font-size: 100%;
  line-height: 1.5;
}

/****** header styles *****/

.header-wrap{
	background-image:url(images/chalkboard-header-footer.jpg);
}

header.header-main {
  max-width: 1180px;
  padding: 0 10px;
  margin: 0 auto;
  overflow: hidden;
  color: white;
  a:link, a:visited {
    color: white;
  }
  /*header.header-main h1 {
	  padding: 20px 0 0 200px;
  }*/
  @media @tablet {
    padding: 0 10px;
  }
  h1 {
    @media @tablet {
      float: left;
    }
  }
}

/***** header widget styles ****/

.header-utility {
  font-family: 'Roboto Condensed', sans-serif;
  .loginout {
    @media @tablet {
      text-align: right;
    }
  }
  @media @tablet {
    float: right;
  }
  .social-links {
    margin: 0 auto;
    @media @tablet {
      margin: none;
      float: right;
    }
  }
}

a.header-donate {
  float: right;
}

/***** nav styles *****/
nav.main-nav {
  max-width: 1180px;
  margin: 0 auto;
  div.menu-main-menu-container {
    float: left;
    font-family: 'Roboto Condensed', sans-serif;
    a {
      border-bottom: none;
    }
    ul {
      text-align: left;
      margin: 0;
      list-style: none;
      li {
        display: inline-block;
        margin: 0 -4px 0 0;
        position: relative;
        padding: 15px 20px;
        background: transparent;
        color: #383D36;
        cursor: pointer;
        list-style-type: none;
        a {
          &:link, &:visited {
            text-decoration: none;
            color: #383D36;
            font-size:1.25em;
          }
        }
        &:hover {
          /* background: #555;
          color: #fff; */
          background:  transparent;
          color: #383D36;
          ul {
            display: block;
            opacity: 1;
            visibility: visible;
          }
        }
        ul {
          padding: 0;
          margin: 0;
          position: absolute;
          top: 48px;
          left: 0;
          width: 150px;
          display: none;
          opacity: 0;
          visibility: hidden;
          li { 
            /* background: #555; 
            display: block; 
            margin: 0;
            color: #fff; */
            background:  #fff; 
            display: block; 
            margin: 0px;
            &:hover {
              /* background: #666; */
              background: #DBD9BC;
              color: #FFF;
            }
          }
        }
      }
    }
    @media @mobile {
      position: relative;
      z-index:1000;
      &>ul {
        width: 220px;
        padding: 5px 0;
        position: absolute;
        top: 0;
        left: 0;
        background: #fff 10px 11px;
        &>li {
          list-style-type: none;
          display: none; /* hide all <li> items */
          color: #555;
          a {
            display: block;
            padding: 5px 5px 5px 32px;
            text-align: left;
          }
        }
        li.current-menu-item {
          display: block; /* show only current <li> item */
          color: #fff;
          font-weight:bold;
        }
        li.current-menu-item a {
          background: none;
        }
        &:hover {
          background-color: #555;
          li.current-menu-item {
            color: #fff;
            background: #666 10px 7px;
          }
          li {
            display: block;
            margin: 0 0 5px;
            a {
             color: #fff;
            }
            ul {
              width: 220px;
              padding: 5px 0;
              position: relative;
              display: block;
              opacity: 100;
              visibility: visible;
              top: 0;
              left: 0;
              background: #6aa441 transparent 10px 11px;
              li {
                display: block;
                margin: 0 0 5px;
                background: transparent;
                color: #fff;
                &:hover {
                  a {
                    color: #ccc;
                  }
                }
                a {
                 color: #fff;
                }
              }
            }
          }
        }
      }
    }
  }
}

div.menu-main-divider-top{
	background-image:url(images/nav-lines-upper.png);
	background-repeat:repeat-x;
	height: 10px;
	max-width: 100%;
  	margin: 0 auto;
  	padding: 0 10px;
}
/*div.menu-main-divider-bottom{
	background-image:url(images/nav-lines-lower.png);
	background-repeat:repeat-x;
	height: 10px;
	max-width: 100%;
  	margin: 0 auto;
  	padding: 0 10px;
}*/

/******** .main styles **********/

.main {
  clear: both;
  padding: 20px 10px 0 10px;
  max-width: 1180px;
  margin: 0 auto;
  overflow: hidden;
}

/******* blog title styles ******/

h1.blog-title {
  padding: 5px 0 5px 20px;
  background-image:url('images/chalkboard-header-footer.jpg');
  font-size: 2.2em;
  color: white;
}

/****** post styles ********/

.main-content {
  overflow: hidden;
  @media @tablet {
    float: left;
  }
  .post-container {
    border-bottom: 3px dotted #383D36;
    margin-bottom: 10px;
    overflow: hidden;
    @media @tablet {
      margin-right: 40px;
      padding-left: 30px;
    }
    p.read-more {
      float: right;
      margin-bottom: 10px;
    }
  }
}

/***** page-specific post styles *****/

.page-container {
    overflow: hidden;
    margin-bottom: 20px;
    @media @tablet {
      padding-left: 20px;
      .home & {
        padding-left: 0;
      }
      p {
        padding: 0 10px;
      }
    }
  }

/******* aside#primary styles ********/

a.more-link {
  float: right;
  padding: 5px;
  &:link, &:visited {
    border: none;
    background: #DBD9BC;
    color: #383D36;
  }
  &:hover, &:focus {
    background: shade(#DBD9BC, 10%);
  }
}

.widget {
  overflow: hidden;
  margin-bottom: 10px;
  p {
    margin: 0 0 5px 15px;
  }
  a.read-more-button {
    float: right;
    padding: 5px;
    &:link, &:visited {
      border: none;
      background: #DBD9BC;
      color: #383D36;
    }
    &:hover, &:focus {
      background: shade(#DBD9BC, 10%);
    }
  }
  ul {
    margin: 0;
    li {
      list-style-type: none;
      margin-left: 15px;
    }
  }
}
aside#primary {
  h3 {
    padding: 10px 0 10px 10px;
    background-image:url(images/header-chalkboard.jpg);
    color: white;
  }
  @media @tablet {
    float: right;
  }
}

/*** .home aside#secondary styling ***/

.home .main-content {
  .page-container {
    float: left;
  }
}
div.home aside#secondary {
  background: none;
  h3 {
    padding: 10px 0 10px 10px;
    font-family: 'Playball', cursive;
    font-size: 2.4em;
  }
  @media @tablet {
    float: right;
  }
}

aside#primary-home {
  clear: both;
  padding-top: 20px;
  a.read-more-button {
    float: right;
  }
  h3 {
    padding: 10px 0 10px 10px;
    background-image:url(images/header-chalkboard.jpg);
    color: white;
  }
  @media @tablet {
    overflow: hidden;
    .widget {
      float: left;
      margin-right: 1.6%;
      &:last-child {
        margin-right: 0;
        float: right;
      }
    }
  }
}

/**************** footer styles **********/

.footer-wrap {
  background-image:url(images/chalkboard-header-footer.jpg);
}

footer {
  max-width: 1180px;
  padding: 10px 10px 0 10px;
  margin: 0 auto;
  clear: both;
  overflow: hidden;
  color: white;
  li a, p a {
      &:link, &:visited {
        color: white;
        text-decoration: none;
      }
      &:hover, &:focus {
        color: tint(white, 2%);
        border-bottom: 1px solid tint(white, 2%);
      }
    }
}

/**** footer nav styles ****/

.menu-footer-menu-container {
  ul {
    margin: 0;
    li {
      margin: 0 0 20px 0;
      float: left;
      list-style-type: none;
      background-image:url(images/header-chalkboard.jpg);
      overflow: hidden;
      &:after {
        content: " |";
        padding-right: 5px;
      }
      &:last-child:after {
        content: "";
      }
    }
  }
}

/***** .footer-left styling ****/

.footer-left {
  @media @tablet {
    float: left;
  }
}

/***** .footer-right styling ****/

.footer-right {
  @media @tablet {
    float: right;
  }
}

/***** global typography styles ******/
h1,h2,h3,h4,h5,h6 {
  font-weight:normal;
}

h1 {
}

h2 {
}

h3 {
}

h4 {
}

p {
  margin-top: .5em;
}

ul {
  text-align:left;
  margin: .7em 0 1em 1.5em;
}

ol {
  text-align:left;
  margin: .7em 0 1em 1.75em;
}

blockquote {
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote p {
  display: inline;
}

p.em {
  font-weight:bold;

}
  

  
img {
}

.main a {
  &:link, &:visited {
    color: shade(#16a085, 20%);
    text-decoration: none;
  }
  &:hover, &:focus {
    border-bottom: none;
    color: tint(shade(#16a085, 20%), 30%);
  }
}



/***** global form styles ******/

form {
}

form label, form input {
}

input.shortfield {
  -webkit-appearance: none;
  -moz-appearance: none;
  /*appearance: none;  */
  padding: 8px 12px;
  border: 0 none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ie-border-radius: 3px;
  width: 25%;
  min-width: 240px;
  max-width: 340px;
}

textarea.longfield {
  -webkit-appearance: none;
  -moz-appearance: none;
  /*appearance: none;  */
  padding: 8px 12px;
  border: 0 none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ie-border-radius: 3px;
  width: 50%;
  min-width: 240px;
  max-width: 640px;
}

/*input[type=submit]       old way of doing this */
input.submit {
  -webkit-appearance: none;
  -moz-appearance: none;
/*  appearance: none;  */
  padding: .75em 1em;
  border: 0 none;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ie-border-radius: 3px;
}

/**** search field styles ****/

form.search-form {
  float: right;
  span {
    display: none;
  }
}

img.search-icon {
  padding-top: 4px;
  width: 22px;
  height: 22px;
}

input.search-field {
  color: white;
  background: none;
  width: 120px;
  height: 15px;
  line-height:20px;
  border: none;
  overflow:hidden;
  border-bottom: 2px solid white;
  font-family: inherit;
}

input.search-field-clicked {
  border-bottom: 2px solid white;
}

